# inkOS

./: flake.nix  makezip.py
arch/dumb/: inksync  inksync.rs
arch/dumb/microfirmware/: main.c  main.c~
arch/wasix/: Cargo.toml  Cargo.toml~
arch/wasix/src/: main.rs
ink/: ink_about.lua
ink/inkbootstrap/: Cargo.toml
ink/inkreader/: .gitignore  BUILD.SH  Book2InkBook.py  DeviceTree.lua  InitSetupDev.py  InitSetupDev.py~  README.md  devicetree.py  ink.spec  inkbook.spec  inkreader.spec  main.py  main.py~  pyproject.toml
ink/libink/: Cargo.toml
ink/luajit/: Cargo.toml
koterm/: _meta.lua  init.lua  keyboard.lua  main.lua  ptyutil.lua
koterm/pty/: android_pty.lua  busybox_pty.lua  linux_pty.lua
koterm/ui/: termscreen.lua  termwidget.lua  vt100.lua
patches/: gapps.rm.sh
